fixed chrome layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -912,7 +912,7 @@ input.button {
 }
 
 .frugle_business_point {
-	width: 194px;
+	width: 190px;
 	float: left;
 	margin:0 30px;
 }
